# my_python_projects

./: London_biking.ipynb  London_biking_data_exploration.ipynb  README.md  spotify_songs.ipynb  spotify_songs_data_cleaning_analysis.ipynb  spotify_songs_data_cleaning_exploration.ipynb  strava_activities.ipynb  uhi_singapore.ipynb  world_bank_data.ipynb
daily_health_monitor/: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.py  main.py  pyproject.toml  requirements.txt  run.sh
daily_health_monitor/analytics/: baselines.py  confidence.py  correlation_engine.py  correlations.py  derived_blocks.py  digest_features.py  digest_v4.py  insight_detectors.py  stream_metrics.py  stress_context.py  stress_curve.py  training_load.py  training_prescription.py  wellness_scores.py
daily_health_monitor/config/: service_account.json.example
daily_health_monitor/docs/: architecture.md  scheduling.md
daily_health_monitor/garmin/: capabilities.py  client.py  hrv.py  transforms.py  wellness.py
daily_health_monitor/jobs/: materialize_history.py  weekly_insights.py
daily_health_monitor/llm/: digest.py
daily_health_monitor/mail/: mailer.py  markdown_html.py
daily_health_monitor/pipeline/: analyzer.py  digest_payload.py  runner.py
daily_health_monitor/scripts/: strava_oauth.py
daily_health_monitor/storage/: __init__.py  bigquery.py  bq_schema.sql  repository.py
daily_health_monitor/strava/: client.py  enricher.py  streams.py  sync.py  transforms.py
daily_health_monitor/tests/: conftest.py  test_analytics.py  test_analyze.py  test_bq_utils.py  test_digest_features.py  test_digest_v4.py  test_formatting.py  test_garmin_transforms.py  test_hrv_capabilities.py  test_mailer.py  test_prompt.py  test_training_prescription.py  test_v52_stress.py  test_v5_calibration.py  test_v6_correctness.py
daily_health_monitor/util/: formatting.py  json_util.py  retry.py  timing.py
good_jobs_digest/: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.py  main.py  pyproject.toml  requirements.txt
good_jobs_digest/config/: webshare_proxies.example.txt
good_jobs_digest/core/: __init__.py  curated.py  curated_registry.py  env.py  models.py  persist.py
good_jobs_digest/digest/: builder.py  formatting.py  selection.py
good_jobs_digest/discovery/: __init__.py  resolve.py  (+6 more)
(+277 files in other folders)
