[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-health-monitor"
version = "1.0.0"
description = "Garmin wellness + Strava activities → BigQuery → analytics → daily physiology digest"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "garminconnect==0.3.3",
    "curl_cffi==0.15.0",
    "python-dotenv==1.2.2",
    "ollama==0.6.2",
    "jinja2==3.1.6",
    "requests==2.34.2",
    "pandas==2.3.3",
    "pandas-gbq==0.35.0",
    "google-cloud-bigquery==3.41.0",
    "google-cloud-bigquery-storage==2.38.0",
    "db-dtypes==1.6.0",
    "google-auth==2.53.0",
    "numpy==2.4.6",
]

[project.optional-dependencies]
dev = ["pytest==9.0.3"]

[project.scripts]
daily-health-monitor = "main:main"

[tool.setuptools]
py-modules = ["main", "config"]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "analytics*",
    "garmin*",
    "strava*",
    "storage*",
    "pipeline*",
    "llm*",
    "mail*",
    "jobs*",
    "util*",
    "scripts*",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
